[Helmi] update pages how to apply

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -160,7 +160,7 @@ header{
 
                     .accordion-button{
                         border: none;
-                        font-weight: bold;
+                        font-weight: 600;
                         color: $Color10;
 
                         &:focus{
