--- a/assets/styles/pages/_courses.scss
+++ b/assets/styles/pages/_courses.scss
@@ -104,7 +104,7 @@ align-items: center;
             transition: 0.4s ease-in-out;
 
             .card-title{
-                font-weight: bold;
+                font-weight: 600;
                 font-size: 18px;
             }
         }
