[Helmi] update login register

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -29,6 +29,9 @@
 @import "./pages/courses";
 @import "./pages/mainContent";
 @import "./pages/enrollment";
+@import "./pages/howToAppy";
+@import "./pages/login";
+@import "./pages/registrasi";
 
 
 
