--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -11,11 +11,14 @@ $Color10: #7E3485;
 $Color11: #E8E8E8;
 $Color12: #BFBFBF;
 $Color13: #000;
+$Color14: #707070;
 
 
 $urlIcon1: "./../images/icons/ic_form.png";
 
+// googlefonts
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
 
 // icons
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css");
