--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css");
 * {
   margin: 0;
@@ -2404,6 +2405,404 @@ section .gundarGraduates__join .join__container .container .primary__button {
   }
   #startNewApp .tab-content .tab-pane .disclaimer__content {
     padding: 20px 0 0 0;
+  }
+}
+
+#howToApply {
+  text-align: center;
+}
+
+#howToApply .howToApply__header {
+  margin-top: 20px;
+}
+
+#howToApply .howToApply__header h2 {
+  color: #D1B590;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: 'Playfair Display', sans-serif;
+}
+
+#howToApply .howToApply__header h2::after {
+  content: "";
+  display: block;
+  width: 16%;
+  margin: 20px auto;
+  border-bottom: 2px solid #E3E3E3;
+}
+
+@media (max-width: 576px) {
+  #howToApply .howToApply__header h2 {
+    font-size: 20px;
+  }
+}
+
+#howToApply .howToApply__header h4 {
+  font-size: 32px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  color: #885A89;
+  text-transform: uppercase;
+}
+
+@media (max-width: 576px) {
+  #howToApply .howToApply__header h4 {
+    font-size: 24px;
+  }
+}
+
+#howToApply .howToApply__subHeader {
+  text-align: left;
+  margin: 30px 0;
+  padding: 0 20px;
+}
+
+#howToApply .howToApply__subHeader h6 {
+  font-weight: 600;
+  font-size: 22px;
+}
+
+#howToApply .howToApply__subHeader p {
+  text-align: justify;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+#howToApply .howToApply__context {
+  text-align: left;
+}
+
+#howToApply .howToApply__context .card__content .row {
+  margin-bottom: 0.75rem;
+}
+
+#howToApply .howToApply__context .card__content h6 {
+  margin-bottom: 6px;
+  font-weight: 600;
+  font-size: 18px;
+}
+
+#howToApply .howToApply__context .card__content p {
+  text-align: justify;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+#howToApply .howToApply__context .card__content ol {
+  padding-left: 1rem;
+}
+
+#howToApply .howToApply__context .card__content ol li {
+  font-size: 14px;
+}
+
+@media (max-width: 576px) {
+  #howToApply #nav-tab {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.login .row .login__gambar .login__gambarBox {
+  background: #F4F4F4;
+  border-radius: 12px;
+}
+
+.login .row .login__gambar .login__gambarBox .login__gambarBox--content {
+  padding: 60px 0;
+}
+
+.login .row .login__gambar .login__gambarBox .login__gambarBox--content .login__gambarBox--contentIllustration {
+  width: 100%;
+  padding: 0 1rem;
+}
+
+.login .row .login__gambar .login__gambarBox .login__gambarBox--content .login__gambarBox--contentIllustration img {
+  width: 100%;
+  height: 100%;
+}
+
+.login .row .login__form .login__formHeader {
+  margin-bottom: 50px;
+}
+
+.login .row .login__form .login__formHeader h5 {
+  font-weight: 700;
+  font-size: 30px;
+  font-family: 'Merriweather',sans-serif;
+  color: #885A89;
+}
+
+.login .row .login__form .login__formHeader p {
+  color: #3B3B3B;
+  font-weight: normal;
+  font-size: 16px;
+}
+
+.login .row .login__form .login__formHeader a {
+  color: #EF7B39;
+}
+
+.login .row .login__form input {
+  border: none;
+  border-bottom: 1px solid #f4f4f4;
+}
+
+.login .row .login__form input:disabled {
+  background: transparent;
+}
+
+.login .row .login__form input:hover, .login .row .login__form input:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.login .row .login__form label {
+  font-size: 14px;
+  font-weight: 300;
+  color: #6A6A6A;
+}
+
+.login .row .login__form .btn__dropdown {
+  border: none;
+  border-bottom: 1px solid #f4f4f4;
+}
+
+.login .row .login__form .btn__dropdown:hover, .login .row .login__form .btn__dropdown:focus {
+  background: transparent;
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.login .row .login__form .invalid-feedback {
+  font-size: 12px;
+}
+
+.login .row .login__form .input-group-text {
+  border: none;
+  border-bottom: 1px solid #f4f4f4;
+  background: transparent;
+}
+
+.login .row .login__form .input-group-text:hover, .login .row .login__form .input-group-text:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.login .row .login__form .btn {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  font-size: 12px;
+  padding: 10px 0;
+}
+
+@media (max-width: 576px) {
+  .login .row .login__form .login__formHeader {
+    margin-bottom: 20px;
+  }
+  .login .row .login__form .login__formHeader h5 {
+    font-size: 24px;
+  }
+  .login .row .login__form .login__formHeader p {
+    font-size: 14px;
+  }
+  .login .row .login__form .login__formHeader a {
+    color: #EF7B39;
+  }
+  .login .row .login__form .btn__dropdown {
+    border: none;
+    border-bottom: 1px solid #f4f4f4;
+  }
+  .login .row .login__form .btn__dropdown:hover, .login .row .login__form .btn__dropdown:focus {
+    background: transparent;
+    outline: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .login .row .login__form .invalid-feedback {
+    font-size: 10px;
+  }
+  .login .row .login__form .input-group-text {
+    border: none;
+    border-bottom: 1px solid #f4f4f4;
+    background: transparent;
+  }
+  .login .row .login__form .input-group-text:hover, .login .row .login__form .input-group-text:focus {
+    outline: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .login .row .login__form .btn {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    font-size: 12px;
+  }
+}
+
+.registrasi .row .registrasi__gambar .registrasi__gambarBox {
+  background: #F4F4F4;
+  border-radius: 12px;
+}
+
+.registrasi .row .registrasi__gambar .registrasi__gambarBox .registrasi__gambarBox--content {
+  padding: 60px 0;
+}
+
+.registrasi .row .registrasi__gambar .registrasi__gambarBox .registrasi__gambarBox--content .registrasi__gambarBox--contentIllustration {
+  width: 100%;
+  padding: 0 1rem;
+}
+
+.registrasi .row .registrasi__gambar .registrasi__gambarBox .registrasi__gambarBox--content .registrasi__gambarBox--contentIllustration img {
+  width: 100%;
+  height: 100%;
+}
+
+.registrasi .row .registrasi__form .registrasi__formHeader {
+  margin-bottom: 50px;
+}
+
+.registrasi .row .registrasi__form .registrasi__formHeader h5 {
+  font-weight: 700;
+  font-size: 30px;
+  font-family: 'Merriweather',sans-serif;
+  color: #885A89;
+}
+
+.registrasi .row .registrasi__form .registrasi__formHeader p {
+  color: #3B3B3B;
+  font-weight: normal;
+  font-size: 16px;
+}
+
+.registrasi .row .registrasi__form .registrasi__formHeader a {
+  color: #EF7B39;
+}
+
+.registrasi .row .registrasi__form input {
+  border: none;
+  border-bottom: 1px solid #f4f4f4;
+}
+
+.registrasi .row .registrasi__form input:disabled {
+  background: transparent;
+}
+
+.registrasi .row .registrasi__form input:hover, .registrasi .row .registrasi__form input:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.registrasi .row .registrasi__form input[type=password] {
+  -webkit-text-security: square;
+}
+
+.registrasi .row .registrasi__form label {
+  font-size: 14px;
+  font-weight: 300;
+  color: #6A6A6A;
+}
+
+.registrasi .row .registrasi__form .btn__dropdown {
+  border: none;
+  border-bottom: 1px solid #f4f4f4;
+}
+
+.registrasi .row .registrasi__form .btn__dropdown:hover, .registrasi .row .registrasi__form .btn__dropdown:focus {
+  background: transparent;
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.registrasi .row .registrasi__form .group__form .form-check-input:checked {
+  background-color: #707070;
+}
+
+.registrasi .row .registrasi__form .group__form label {
+  font-weight: 500;
+  font-size: 0.85rem;
+}
+
+.registrasi .row .registrasi__form .group__form .forgot__password {
+  font-size: 0.85rem;
+  color: #D1B590;
+}
+
+.registrasi .row .registrasi__form .input-group-text {
+  border: none;
+  border-bottom: 1px solid #f4f4f4;
+  background: transparent;
+}
+
+.registrasi .row .registrasi__form .input-group-text:hover, .registrasi .row .registrasi__form .input-group-text:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.registrasi .row .registrasi__form .btn {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  font-size: 12px;
+  padding: 10px 0;
+}
+
+@media (max-width: 576px) {
+  .registrasi .row .registrasi__form .registrasi__formHeader {
+    margin-bottom: 20px;
+  }
+  .registrasi .row .registrasi__form .registrasi__formHeader h5 {
+    font-size: 24px;
+  }
+  .registrasi .row .registrasi__form .registrasi__formHeader p {
+    font-size: 14px;
+  }
+  .registrasi .row .registrasi__form .registrasi__formHeader a {
+    color: #EF7B39;
+  }
+  .registrasi .row .registrasi__form .btn__dropdown {
+    border: none;
+    border-bottom: 1px solid #f4f4f4;
+  }
+  .registrasi .row .registrasi__form .btn__dropdown:hover, .registrasi .row .registrasi__form .btn__dropdown:focus {
+    background: transparent;
+    outline: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .registrasi .row .registrasi__form .group__form label {
+    font-weight: 500;
+    font-size: 0.7rem;
+  }
+  .registrasi .row .registrasi__form .group__form .forgot__password {
+    font-size: 0.7rem;
+    color: #D1B590;
+  }
+  .registrasi .row .registrasi__form .input-group-text {
+    border: none;
+    border-bottom: 1px solid #f4f4f4;
+    background: transparent;
+  }
+  .registrasi .row .registrasi__form .input-group-text:hover, .registrasi .row .registrasi__form .input-group-text:focus {
+    outline: none;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .registrasi .row .registrasi__form .btn {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    font-size: 12px;
+  }
+  .registrasi .row .registrasi__gambar {
+    -webkit-box-ordinal-group: 0 !important;
+        -ms-flex-order: -1 !important;
+            order: -1 !important;
   }
 }
 /*# sourceMappingURL=styles.css.map */
