--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -12,6 +12,7 @@ $Color11: #E8E8E8;
 $Color12: #BFBFBF;
 $Color13: #000;
 $Color14: #707070;
+$Color15:#B5B5B5;
 
 
 $urlIcon1: "./../images/icons/ic_form.png";
