--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -150,7 +150,7 @@ header{
                         text-decoration: none;
                     }
 
-                    &:nth-child(2) .accordion-button:after,&:nth-child(3) .accordion-button:after,&:nth-child(6) .accordion-button:after{
+                    &:nth-child(2) .accordion-button:after,&:nth-child(5) .accordion-button:after,&:nth-child(6) .accordion-button:after,{
                         background: none;
                     }
 
@@ -177,7 +177,6 @@ header{
                     }
 
                     .accordion__child-menu{
-
                         .accordion__subMenu:after{
                             background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
                         }
@@ -223,7 +222,7 @@ header{
                         }
 
                         .accordion-item{
-                            &:nth-child(4) .accordion-button:after, &:nth-child(5) .accordion-button:after{
+                            &:nth-child(3) .accordion-button:after, &:nth-child(4) .accordion-button:after, &:nth-child(5) .accordion-button:after{
                                 background: none;
                             }
                         }
