--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -673,7 +673,7 @@ header .sidebar .sidebar__left .sidebar__menu .accordion-item a {
   text-decoration: none;
 }
 
-header .sidebar .sidebar__left .sidebar__menu .accordion-item:nth-child(2) .accordion-button:after, header .sidebar .sidebar__left .sidebar__menu .accordion-item:nth-child(3) .accordion-button:after, header .sidebar .sidebar__left .sidebar__menu .accordion-item:nth-child(6) .accordion-button:after {
+header .sidebar .sidebar__left .sidebar__menu .accordion-item:nth-child(2) .accordion-button:after, header .sidebar .sidebar__left .sidebar__menu .accordion-item:nth-child(5) .accordion-button:after, header .sidebar .sidebar__left .sidebar__menu .accordion-item:nth-child(6) .accordion-button:after {
   background: none;
 }
 
@@ -743,7 +743,7 @@ header .sidebar .sidebar__left .sidebar__menu .accordion-item .accordion__child-
   text-decoration: none;
 }
 
-header .sidebar .sidebar__left .sidebar__menu .accordion-item .accordion__child-menu .accordion-item:nth-child(4) .accordion-button:after, header .sidebar .sidebar__left .sidebar__menu .accordion-item .accordion__child-menu .accordion-item:nth-child(5) .accordion-button:after {
+header .sidebar .sidebar__left .sidebar__menu .accordion-item .accordion__child-menu .accordion-item:nth-child(3) .accordion-button:after, header .sidebar .sidebar__left .sidebar__menu .accordion-item .accordion__child-menu .accordion-item:nth-child(4) .accordion-button:after, header .sidebar .sidebar__left .sidebar__menu .accordion-item .accordion__child-menu .accordion-item:nth-child(5) .accordion-button:after {
   background: none;
 }
 
@@ -2698,10 +2698,6 @@ section .gundarGraduates__join .join__container .container .primary__button {
           box-shadow: none;
 }
 
-.registrasi .row .registrasi__form input[type=password] {
-  -webkit-text-security: square;
-}
-
 .registrasi .row .registrasi__form label {
   font-size: 14px;
   font-weight: 300;
@@ -2804,5 +2800,214 @@ section .gundarGraduates__join .join__container .container .primary__button {
         -ms-flex-order: -1 !important;
             order: -1 !important;
   }
+}
+
+#listScholarship {
+  text-align: center;
+}
+
+#listScholarship .listScholarship__header {
+  margin-top: 20px;
+}
+
+#listScholarship .listScholarship__header h2 {
+  color: #D1B590;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: 'Playfair Display', sans-serif;
+}
+
+#listScholarship .listScholarship__header h2::after {
+  content: "";
+  display: block;
+  width: 16%;
+  margin: 20px auto;
+  border-bottom: 2px solid #E3E3E3;
+}
+
+@media (max-width: 576px) {
+  #listScholarship .listScholarship__header h2 {
+    font-size: 20px;
+  }
+}
+
+#listScholarship .listScholarship__header h4 {
+  font-size: 32px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  color: #885A89;
+  text-transform: uppercase;
+}
+
+@media (max-width: 576px) {
+  #listScholarship .listScholarship__header h4 {
+    font-size: 24px;
+  }
+}
+
+#listScholarship .listScholarship__subHeader {
+  text-align: left;
+}
+
+#listScholarship .listScholarship__subHeader h5 {
+  font-weight: 500;
+  font-size: 22px;
+}
+
+#listScholarship .listScholarship__subHeader p {
+  font-size: 15px;
+}
+
+#listScholarship .listScholarship__context .card {
+  text-align: left;
+}
+
+#listScholarship .listScholarship__context .card h5 {
+  color: #885A89;
+  font-weight: 500;
+  font-size: 14px;
+}
+
+#listScholarship .listScholarship__context .card .card__calender {
+  color: #CBCBD5;
+  font-weight: 300;
+  font-size: 11px;
+}
+
+#listScholarship .listScholarship__context .card p {
+  font-weight: 400;
+  font-size: 12px;
+}
+
+#listScholarship .listScholarship__context .card .scholarship__readMore {
+  font-size: 12px;
+  color: #EF7B39;
+}
+
+#detailScholarship {
+  text-align: center;
+}
+
+#detailScholarship .detailScholarship__header {
+  margin-top: 20px;
+}
+
+#detailScholarship .detailScholarship__header h2 {
+  color: #D1B590;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: 'Playfair Display', sans-serif;
+}
+
+#detailScholarship .detailScholarship__header h2::after {
+  content: "";
+  display: block;
+  width: 16%;
+  margin: 20px auto;
+  border-bottom: 2px solid #E3E3E3;
+}
+
+@media (max-width: 576px) {
+  #detailScholarship .detailScholarship__header h2 {
+    font-size: 20px;
+  }
+}
+
+#detailScholarship .detailScholarship__header h4 {
+  font-size: 32px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  color: #885A89;
+  text-transform: uppercase;
+}
+
+@media (max-width: 576px) {
+  #detailScholarship .detailScholarship__header h4 {
+    font-size: 24px;
+  }
+}
+
+#detailScholarship .detailScholarship__context {
+  text-align: left;
+}
+
+#detailScholarship .detailScholarship__context .card .card__description {
+  font-size: 14px;
+  font-family: 'Poppins', sans-serif;
+  text-align: justify;
+}
+
+#detailScholarship .detailScholarship__context .card .card__programDetails h5 {
+  font-weight: 600;
+}
+
+#detailScholarship .detailScholarship__context .card .card__programDetails ul {
+  padding: 0;
+  padding: 0 0.5rem;
+}
+
+#detailScholarship .detailScholarship__context .card .card__programDetails ul li {
+  list-style-type: "-";
+  font-size: 14px;
+}
+
+#detailScholarship .detailScholarship__context .card .card__programDetails h6 {
+  font-weight: 600;
+}
+
+#detailScholarship .detailScholarship__context .card .card__programDetails h6 span {
+  font-weight: normal;
+  font-size: 14px;
+}
+
+#detailScholarship .detailScholarship__context .card .card__note ul li {
+  padding: 0;
+}
+
+#detailScholarship .detailScholarship__context .card .card__note ul li::marker {
+  color: #885A89;
+  font-size: 1.8rem;
+}
+
+#detailScholarship .detailScholarship__context .card .card__link a {
+  color: #000;
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.latestNews {
+  background: #F4F4F4;
+}
+
+.latestNews .latestNews__header {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.latestNews .latestNews__content .latestNews__col--header h6 {
+  color: #885A89;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.latestNews .latestNews__content .latestNews__col--header p {
+  font-weight: 400;
+  color: #000;
+  font-size: 14px;
+}
+
+.latestNews .latestNews__content p {
+  font-size: 12px;
+  color: #6A6A6A;
+}
+
+.latestNews .latestNews__content a {
+  font-size: 12px;
+  color: #EF7B39;
+}
+
+.latestNews .latestNews__content .col:first-child {
+  border-right: 1px solid #B5B5B5;
 }
 /*# sourceMappingURL=styles.css.map */
