--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -196,6 +196,28 @@ html::-webkit-scrollbar {
      object-fit: contain;
 }
 
+.jumbotron__profile {
+  background: #E8E8E8;
+}
+
+.jumbotron__profile .jumbotron__preview .jumbotron__imgBx {
+  width: 150px;
+  height: 150px;
+}
+
+.jumbotron__profile .jumbotron__preview .jumbotron__imgBx img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+
+.jumbotron__profile .jumbotron__preview .jumbotron__editProfileBtn {
+  background: #EF7B39;
+  color: #FFF;
+}
+
 @media (max-width: 576px) {
   .jumbotron {
     margin-top: -12px;
@@ -229,6 +251,13 @@ html::-webkit-scrollbar {
     -webkit-clip-path: none;
             clip-path: none;
     height: 100%;
+  }
+  .jumbotron__profile .jumbotron__preview .jumbotron__imgBx {
+    width: 75px;
+    height: 75px;
+  }
+  .jumbotron__profile .jumbotron__profileContent {
+    padding: .5rem !important;
   }
 }
 
@@ -2982,7 +3011,7 @@ section .gundarGraduates__join .join__container .container .primary__button {
 .latestNews .latestNews__header {
   font-family: 'Poppins', sans-serif;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .latestNews .latestNews__content .latestNews__col--header h6 {
@@ -3009,5 +3038,279 @@ section .gundarGraduates__join .join__container .container .primary__button {
 
 .latestNews .latestNews__content .col:first-child {
   border-right: 1px solid #B5B5B5;
+}
+
+#profile {
+  text-align: center;
+}
+
+#profile .profile__header {
+  margin-top: 20px;
+}
+
+#profile .profile__header h2 {
+  color: #D1B590;
+  font-size: 24px;
+  font-weight: bold;
+  font-family: 'Playfair Display', sans-serif;
+}
+
+#profile .profile__header h2::after {
+  content: "";
+  display: block;
+  width: 16%;
+  margin: 20px auto;
+  border-bottom: 2px solid #E3E3E3;
+}
+
+@media (max-width: 576px) {
+  #profile .profile__header h2 {
+    font-size: 20px;
+  }
+}
+
+#profile .profile__header h4 {
+  font-size: 32px;
+  margin-bottom: 15px;
+  font-weight: bold;
+  color: #885A89;
+  text-transform: uppercase;
+}
+
+@media (max-width: 576px) {
+  #profile .profile__header h4 {
+    font-size: 24px;
+  }
+}
+
+#profile .event {
+  text-align: left;
+}
+
+#profile .event .event__contents .card {
+  border-radius: 20px;
+  margin: 5px 0;
+  -webkit-box-shadow: 2px 2px 2px #000;
+          box-shadow: 2px 2px 2px #000;
+}
+
+#profile .event .event__contents .card .event__boxImg {
+  padding: 5px;
+  width: 100%;
+  height: 100%;
+}
+
+#profile .event .event__contents .card .event__boxImg img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+#profile .event .event__contents .card .event__content {
+  padding: 20px;
+}
+
+#profile .event .event__contents .card .event__content h3 {
+  font-size: 19px;
+  font-weight: bold;
+}
+
+#profile .event .event__contents .card .event__content p {
+  font-size: 14px;
+  text-align: justify;
+}
+
+#profile .event .event__contents .card .event__content a {
+  color: #EF7B39;
+}
+
+.latestNews__profile {
+  background: #FFF;
+}
+
+.latestNews__profile .latestNews__header {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.latestNews__profile .latestNews__content .latestNews__col--header h6 {
+  color: #885A89;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.latestNews__profile .latestNews__content .latestNews__col--header p {
+  font-weight: 400;
+  color: #000;
+  font-size: 14px;
+}
+
+.latestNews__profile .latestNews__content p {
+  font-size: 12px;
+  color: #6A6A6A;
+}
+
+.latestNews__profile .latestNews__content a {
+  font-size: 12px;
+  color: #EF7B39;
+}
+
+.latestNews__profile .latestNews__content .col:first-child {
+  border-right: 1px solid #B5B5B5;
+}
+
+.edit__profile h4 {
+  color: #885A89;
+}
+
+.edit__profile .card {
+  border-bottom: 4px solid #885A89;
+  min-height: 430px;
+}
+
+.edit__profile form .card .card-header {
+  border-bottom: none;
+}
+
+.edit__profile form .card .card-header .avatar-upload {
+  position: relative;
+  max-width: 205px;
+  margin: 50px auto;
+}
+
+.edit__profile form .card .card-header .avatar-upload .avatar-edit {
+  position: absolute;
+  right: 12px;
+  z-index: 1;
+  top: 10px;
+}
+
+.edit__profile form .card .card-header .avatar-upload .avatar-edit input {
+  display: none;
+}
+
+.edit__profile form .card .card-header .avatar-upload .avatar-edit input + label {
+  display: inline-block;
+  width: 34px;
+  height: 34px;
+  margin-bottom: 0;
+  border-radius: 100%;
+  background: #FFFFFF;
+  border: 1px solid transparent;
+  -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.12);
+  cursor: pointer;
+  font-weight: normal;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.edit__profile form .card .card-header .avatar-upload .avatar-edit input + label:hover {
+  background: #f1f1f1;
+  border-color: #d6d6d6;
+}
+
+.edit__profile form .card .card-header .avatar-upload .avatar-edit input + label:after {
+  font-family: 'Font Awesome\ 5 Free' !important;
+  content: "\f083" !important;
+  font-weight: 900 !important;
+  color: #757575;
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  margin: auto;
+}
+
+.edit__profile form .card .card-header .avatar-upload .avatar-preview {
+  width: 192px;
+  height: 192px;
+  position: relative;
+  border-radius: 100%;
+  border: 6px solid #F8F8F8;
+  -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
+}
+
+.edit__profile form .card .card-header .avatar-upload .avatar-preview > div {
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.edit__profile form .profile__content h5 {
+  color: #885A89;
+}
+
+.edit__profile form .profile__content .card-body input, .edit__profile form .profile__content .card-body textarea {
+  border: none;
+  border-bottom: 1px solid #F4F4F4;
+}
+
+.edit__profile form .profile__content .card-body input:disabled, .edit__profile form .profile__content .card-body textarea:disabled {
+  border: 1px solid #3b3b3b;
+}
+
+.edit__profile form .profile__content .card-body input:hover, .edit__profile form .profile__content .card-body input:focus, .edit__profile form .profile__content .card-body textarea:hover, .edit__profile form .profile__content .card-body textarea:focus {
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.edit__profile form .profile__content .card-body input[type="radio"] {
+  border: 1px solid #6A6A6A;
+}
+
+.edit__profile form .profile__content .card-body input[type="tel"] {
+  border: none;
+  border-bottom: 1px solid #F4F4F4;
+}
+
+.edit__profile form .profile__content .card-body input[type="tel"]:disabled {
+  background: transparent;
+}
+
+.edit__profile form .profile__content .card-body label {
+  font-size: 12px;
+  font-weight: 300;
+  color: #6A6A6A;
+}
+
+.edit__profile form .profile__content .card-body .btn__dropdown {
+  border: none;
+  border-bottom: 1px solid #f4f4f4;
+}
+
+.edit__profile form .profile__content .card-body .btn__dropdown:hover, .edit__profile form .profile__content .card-body .btn__dropdown:focus {
+  background: transparent;
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.edit__profile form .profile__content .card-body .noted h6 {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.edit__profile form .profile__content .card-body .noted p {
+  font-size: 14px;
+}
+
+.edit__profile form .btn__group .btn__cancel {
+  background: #F4F4F4;
+  color: #EF7B39;
+}
+
+.edit__profile form .btn__group .btn__save {
+  background: #EF7B39;
+  color: #FFF;
 }
 /*# sourceMappingURL=styles.css.map */
