--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -26,13 +26,14 @@
 @import "./layouts/footer";
 
 // pages
-@import "./pages/courses";
+@import "./pages/courses";  
 @import "./pages/mainContent";
 @import "./pages/enrollment";
 @import "./pages/howToAppy";
 @import "./pages/login";
 @import "./pages/registrasi";
-@import "./pages/scholarships"
+@import "./pages/scholarships";
+@import "./pages/profile";
 
 
 
