[Helmi] Update pages research and alumni

--- a/assets/styles/base/_variables.scss
+++ b/assets/styles/base/_variables.scss
@@ -13,6 +13,7 @@ $Color12: #BFBFBF;
 $Color13: #000;
 $Color14: #707070;
 $Color15:#B5B5B5;
+$Color16: #6E6E6E;
 
 
 $urlIcon1: "./../images/icons/ic_form.png";
