--- a/assets/styles/pages/_profile.scss
+++ b/assets/styles/pages/_profile.scss
@@ -112,7 +112,7 @@
                     margin: 50px auto;
                     .avatar-edit {
                         position: absolute;
-                        right: 12px;
+                        right: 1.25rem;
                         z-index: 1;
                         top: 10px;
                         input {
@@ -139,7 +139,7 @@
                                     font-weight: 900 !important;
                                     color: #757575;
                                     position: absolute;
-                                    top: 10px;
+                                    top: 7px;
                                     left: 0;
                                     right: 0;
                                     text-align: center;
