--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -34,6 +34,8 @@
 @import "./pages/registrasi";
 @import "./pages/scholarships";
 @import "./pages/profile";
+@import "./pages/research";
+@import "./pages/alumni";
 
 
 
